--- a/views/_layouts/main.handlebars
+++ b/views/_layouts/main.handlebars
@@ -41,6 +41,17 @@
         vertical-align: top;
         position: relative;
     }
+    .selected_radio {
+        background-color: red;
+        border-radius: 7px;
+        width: 40%;
+        text-align: center;
+        font-size: 18px;
+        margin: 5px;
+        padding: 10px;
+        vertical-align: top;
+        position: relative;
+    }
 </style>
 {{{_sections.css}}}
 </head>
