Xử lí click trang index router sang danh sách môn học theo mã môn học

--- a/views/client/index.hbs
+++ b/views/client/index.hbs
@@ -7,7 +7,7 @@
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
-											<a href="single.html">
+											<a href="/monhoc/toan">
 												Toán
 											</a>
 										</h3>
@@ -24,7 +24,7 @@
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
-											<a href="single.html">
+											<a href="/monhoc/viet">
 												Tiếng Việt
 											</a>
 										</h3>
@@ -41,7 +41,7 @@
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
-											<a href="single.html">
+											<a href="/monhoc/anh">
 												Tiếng Anh
 											</a>
 										</h3>
