fix trang index

--- a/views/client/index.hbs
+++ b/views/client/index.hbs
@@ -5,7 +5,7 @@
 								<div class="banner-left1-grid">
 									<img src="images/math.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
-										<a class="read-more" href="single.html"><i></i></a>
+										<a class="read-more" href="/monhoc/toan"><i></i></a>
 										<h3>
 											<a href="/monhoc/toan">
 												Toán
@@ -22,7 +22,7 @@
 								<div class="banner-left1-grid">
 									<img src="images/vietnamese.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
-										<a class="read-more" href="single.html"><i></i></a>
+										<a class="read-more" href="/monhoc/viet"><i></i></a>
 										<h3>
 											<a href="/monhoc/viet">
 												Tiếng Việt
@@ -39,7 +39,7 @@
 								<div class="banner-left1-grid">
 									<img src="images/english.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
-										<a class="read-more" href="single.html"><i></i></a>
+										<a class="read-more" href="/monhoc/anh"><i></i></a>
 										<h3>
 											<a href="/monhoc/anh">
 												Tiếng Anh
