--- a/views/client/danhsachbaihoc.hbs
+++ b/views/client/danhsachbaihoc.hbs
@@ -70,9 +70,6 @@
 <script>
 	let token = window.location.href.split("/");
 	let page = token[token.length - 1];
-<<<<<<< HEAD
-  let total = $(".pagination a").length - 2;
-=======
 	let totalPage = $(".pagination a").length - 2;
 	if(page > totalPage){
 		window.location.replace("/baihoc/" + totalPage);
@@ -80,21 +77,12 @@
 	if(page < 1){
 		window.location.replace("/baihoc/1");
 	}
->>>>>>> f3beb430cee72265741bdc2115411449d2442ceb
 	if(parseInt(page)){
 		$("#page-" + page).css("color", "red");
+	}else{
+		page = 1;
 	}
 	function previous(){
-<<<<<<< HEAD
-    if(page != 1){
-		  window.location.replace("/baihoc/" + (parseInt(page) - 1));
-    }
-	}
-	function next(){
-    if(page != total){
-		  window.location.replace("/baihoc/" + (parseInt(page) + 1));
-    }
-=======
 		if(page > 1){
 			window.location.replace("/baihoc/" + (parseInt(page) - 1));
 		}
@@ -103,6 +91,5 @@
 		if(page < totalPage){
 			window.location.replace("/baihoc/" + (parseInt(page) + 1));
 		}
->>>>>>> f3beb430cee72265741bdc2115411449d2442ceb
 	}
 </script>
