--- a/views/client/danhsachdethi.hbs
+++ b/views/client/danhsachdethi.hbs
@@ -54,7 +54,7 @@
 	<ul class="pagination">
 		<li><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
 		{{#each page}}
-		<li><a href="/dethi/{{this}}" id="page-{{this}}">{{this}}</a></li>
+		<li><a href="/dethi/?page={{this}}" id="page-{{this}}">{{this}}</a></li>
 		{{/each}}
 		<li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
 	</ul>
@@ -68,10 +68,10 @@
 		$("#page-" + page).css("color", "red");
 	}
 	function previous(){
-		window.location.replace("/dethi/" + (parseInt(page) - 1));
+		window.location.replace("/dethi/?page=" + (parseInt(page) - 1));
 	}
 	function next(){
-		window.location.replace("/dethi/" + (parseInt(page) + 1));
+		window.location.replace("/dethi/?page=" + (parseInt(page) + 1));
 	}
 </script>
 
